#add_subdirectory( HeatEquation )
add_subdirectory( HeatEquationGrid )
add_subdirectory( Grid )
add_subdirectory( BLAS )
add_subdirectory( NDArray )
add_subdirectory( SpMV )
add_subdirectory( DistSpMV )
add_subdirectory( LinearSolvers )
#add_subdirectory( ODESolvers )
add_subdirectory( Sorting )
#add_subdirectory( Traversers )
