add_subdirectory(HeatEquation)
add_subdirectory(DenseLinearSolvers)
add_subdirectory(Graphs)
add_subdirectory(Grid)
add_subdirectory(BLAS)
add_subdirectory(NDArray)
add_subdirectory(LinearSolvers)
add_subdirectory(ODESolvers)
add_subdirectory(Sorting)
add_subdirectory(System)
add_subdirectory(Eigen)
add_subdirectory(DenseMatrices)
